added dynamic buttons

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		<form>
 		  <div class="form-group">
 		    <label for="exampleInputEmail1">Add a button of your choice</label>
-		    <input type="text" class="form-control" id="yourChoice" placeholder="">
+		    <input type="text" class="form-control" id="userChoice" placeholder="">
 		  </div>
-		  <button type="submit" class="btn btn-default">Submit </button>
+		  <button id="btnAdd" type="submit" class="btn btn-default">Submit </button>
 	</form>
 	
 	<footer class="footer">
