fetches videos when buttons are clicked. videos play/pause when clicked

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 		
 	</div>
 
-	<div id="images" class="container">
-		
-	</div>
-
-		<form>
+	<form>
 		  <div class="form-group">
-		    <label for="exampleInputEmail1">Add a button of your choice</label>
+		    <label for="userChoice">Add a button of your choice</label>
 		    <input type="text" class="form-control" id="userChoice" placeholder="">
 		  </div>
 		  <button id="btnAdd" type="submit" class="btn btn-default">Submit </button>
 	</form>
+	<div class="container">
+		<div id="videos"  class="row"></div>
+	</div>
+
+	
 	
 	<footer class="footer">
       
