changed theme to sports

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Origami</title>
+	<title>Games</title>
 	<meta name="viewport" content="width=device-width">
 
 
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<header>Origami</header>
+	<header>Get the video clips of your favorite games from GIPHY</header>
 	<div  class="container">
 		<div id="choices" class="row">
 		
@@ -24,7 +24,7 @@
 		  </div>
 		  <button id="btnAdd" type="submit" class="btn btn-default">Submit </button>
 	</form>
-	<div class="container">
+	<div class="container-fluid">
 		<div id="videos"  class="row"></div>
 	</div>
 
