--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-	<header>Get the video clips of your favorite games from GIPHY</header>
+	<header>Get the video clips of your favorite sport from GIPHY</header>
 	<div  class="container">
 		<div id="choices" class="row">
 		
@@ -19,13 +19,13 @@
 
 	<form>
 		  <div class="form-group">
-		    <label for="userChoice">Add a button of your choice</label>
+		    <label for="userChoice">Add a sport of your choice</label>
 		    <input type="text" class="form-control" id="userChoice" placeholder="">
 		  </div>
 		  <button id="btnAdd" type="submit" class="btn btn-default">Submit </button>
 	</form>
 	<div class="container-fluid">
-		<div id="videos"  class="row"></div>
+		<div id="images"  class="row"></div>
 	</div>
 
 	
