--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 		  <div class="form-group container">
 		    <label for="userChoice" class="row">Add a sport of your choice</label>
 		    <div class="row">
-		    <input type="text" class="form-control col-lg-4" id="userChoice" placeholder=""><div class="col-lg-8"></div>	
+		    	<input type="text" class="form-control col-lg-4" id="userChoice" placeholder="">
+		    	<div class="col-lg-8"></div>	
 		    </div>
 			</div>
 		  <button id="btnAdd" type="submit" class="btn btn-default">Submit </button>
@@ -37,7 +38,7 @@
 	
 	<footer class="footer">
       
-        <p class="text-muted">Developed by Bhagya.</p>
+        <p class="text-muted text-center">Developed by Bhagya.</p>
       
     </footer>
 
