added text color, font family

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Caesar+Dressing|Kanit|Ubuntu+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ruluko" rel="stylesheet">
 
 </head>
 <body>
 	<header class='text-center'><h1>GIFTASTIC</h1><i><h4>Get gifs of your favorite sport from GIPHY</i></h4></header>
 	
 	<div  class="container">
-		<p><strong>Click on any sport</strong></p>
+		<p><strong>Click on any sport to get gifs</strong></p>
 		<div id="choices" class="row"></div>
 	</div>
 	<br>
 	<form class="container">
 		<div class="form-group row">
-		    <label for="userChoice" class="col-lg-12">Add a sport of your choice</label>
+		    <label for="userChoice" class="col-lg-12">Add a sport of your choice to the above list</label>
 		    <div class="row">
 			    <div class="col-lg-4"><input id="userChoice" type="text" class="form-control" placeholder=""></div>
 			    	
